--- a/src/app/movies/movie-card/movie-card.component.html
+++ b/src/app/movies/movie-card/movie-card.component.html
@@ -1,7 +1,7 @@
 <div>
-	<img [src]="movieDetails.Poster" alt="" />
+	<img [src]="movie.Poster" alt="" />
 
-	<p>{{ movieDetails.Title }}</p>
+	<p>{{ movie.Title }}</p>
 
 	<p>Plot{{ details.Plot }}</p>
 	<p>Actors{{ details.Actors }}</p>
@@ -10,6 +10,6 @@
 			Rating{{ rating.Source + ": " + rating.Value }}
 		</li>
 	</ul>
-	<p>{{ movieDetails.Year }}</p>
-	<button (click)="moreDetails(movieDetails.imdbID)">Details</button>
+	<p>{{ movie.Year }}</p>
+	<button (click)="moreDetails(movie.imdbID)">Details</button>
 </div>
