--- a/src/app/movies/movie-list/movie-list.component.html
+++ b/src/app/movies/movie-list/movie-list.component.html
@@ -1,5 +1,5 @@
 <div>
 	<div *ngFor="let movie of movies">
-		<app-movie-card [movieDetails]="movie"></app-movie-card>
+		<app-movie-card [movie]="movie"></app-movie-card>
 	</div>
 </div>
