--- a/src/app/movies/movie-list/movie-list.component.html
+++ b/src/app/movies/movie-list/movie-list.component.html
@@ -1,5 +1,13 @@
-<div>
-	<div *ngFor="let movie of movies">
-		<app-movie-card [movie]="movie"></app-movie-card>
+<!-- TODO pagination -->
+<div class="row">
+	<div
+		[ngClass]="{ extract: show(movieId, movie.imdbID) }"
+		class="column"
+		*ngFor="let movie of movies"
+	>
+		<app-movie-card
+			(extract)="extractMovie($event)"
+			[movie]="movie"
+		></app-movie-card>
 	</div>
 </div>
