--- a/src/app/movies/search-bar/search-bar.component.css
+++ b/src/app/movies/search-bar/search-bar.component.css
@@ -1,4 +1,30 @@
 .navbar {
 	display: flex;
+	flex-direction: row;
 	justify-content: space-between;
+	padding: 0.2% 10%;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.title {
+	font-size: 25px;
+	font-weight: bold;
+}
+
+.search {
+	padding: 25px 0;
+}
+
+/* TODO make the input styling better */
+
+.input {
+	border: none;
+	border-bottom: 1px solid rgb(199, 195, 195);
+}
+
+@media (max-width: 800px) {
+	.navbar {
+		flex-direction: column;
+		align-items: center;
+	}
 }
