--- a/src/app/movies/movie-card/movie-card.component.html
+++ b/src/app/movies/movie-card/movie-card.component.html
@@ -6,7 +6,7 @@
 	<div class="details">
 		<p class="movieTitle">{{ movie?.Title }}</p>
 
-		<div *ngIf="showDetails">
+		<div *ngIf="showDetails" class="moreDetails">
 			<p>Plot{{ details?.Plot }}</p>
 			<p>Actors{{ details?.Actors }}</p>
 
