--- a/src/app/movies/movies-home/movies-home.component.html
+++ b/src/app/movies/movies-home/movies-home.component.html
@@ -1,2 +1,8 @@
 <app-search-bar (submitted)="onSearch($event)"></app-search-bar>
+<app-message
+	*ngIf="moviesList?.length === 0 || moviesList === undefined"
+	[type]="moviesList == undefined ? 'error' : 'default'"
+>
+	{{ message }}
+</app-message>
 <app-movie-list [movies]="moviesList"></app-movie-list>
