--- a/src/app/movies/search-bar/search-bar.component.css
+++ b/src/app/movies/search-bar/search-bar.component.css
@@ -25,6 +25,15 @@
 	border-bottom: 2px solid #307cfb;
 }
 
+.disable {
+	cursor: not-allowed;
+}
+
+.errorMessage {
+	font-size: 10px;
+	color: red;
+}
+
 @media (max-width: 800px) {
 	.navbar {
 		flex-direction: column;
