Add reactive search form

--- a/src/app/movies/search-bar/search-bar.component.html
+++ b/src/app/movies/search-bar/search-bar.component.html
@@ -4,7 +4,10 @@
 	</div>
 
 	<div class="search">
-		<form [formGroup]="searchForm" (submit)="onSubmitSearch($event)">
+		<form
+			[formGroup]="searchForm"
+			(submit)="onSubmitSearch(searchForm.controls.movieName.value)"
+		>
 			<label>Search a movie: </label>
 
 			<input
