--- a/src/app/movies/search-bar/search-bar.component.html
+++ b/src/app/movies/search-bar/search-bar.component.html
@@ -16,14 +16,17 @@
 				[formControl]="$any(searchForm.controls.movieName)"
 			/>
 			&nbsp;
-			<button
-				[disabled]="searchForm.invalid"
-				[ngClass]="{ disable: searchForm.invalid }"
-				class="btn"
-				type="submit"
+
+			<a [routerLink]="['/movies', searchForm.controls.movieName.value]">
+				<button
+					[disabled]="searchForm.invalid"
+					[ngClass]="{ disable: searchForm.invalid }"
+					class="btn"
+					type="submit"
+				>
+					&nbsp; SEARCH &nbsp;
+				</button></a
 			>
-				&nbsp; SEARCH &nbsp;
-			</button>
 
 			<div
 				*ngIf="
