Change route structure - add not found component

--- a/src/app/movies/movies-home/movies-home.component.html
+++ b/src/app/movies/movies-home/movies-home.component.html
@@ -1,7 +1,2 @@
-<app-search-bar (submitted)="onSearch($event)"></app-search-bar>
-<app-message
-	*ngIf="!showMessage || moviesList === undefined"
-	[type]="moviesList == undefined ? 'error' : 'default'"
->
-	{{ message }}
-</app-message>
+<app-search-bar></app-search-bar>
+<router-outlet></router-outlet>
