--- a/src/app/movies/movie-list/movie-list.component.css
+++ b/src/app/movies/movie-list/movie-list.component.css
@@ -14,6 +14,31 @@
 	width: 98%;
 }
 
+.pagination {
+	display: flex;
+	justify-content: center;
+	margin: 5% 0;
+}
+
+.pagination span {
+	color: black;
+	float: left;
+	padding: 8px 16px;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+.pagination span.active {
+	background-color: #307cfb;
+	color: white;
+	border-radius: 5px;
+}
+
+.pagination span:hover:not(.active) {
+	background-color: #ddd;
+	border-radius: 5px;
+}
+
 @media screen and (max-width: 800px) {
 	.row {
 		flex-direction: column;
