--- a/src/app/movies/movie-card/movie-card.component.css
+++ b/src/app/movies/movie-card/movie-card.component.css
@@ -55,6 +55,11 @@
 	top: 25%;
 }
 
+.default {
+	width: 300px;
+	height: 445px;
+}
+
 @media screen and (max-width: 800px) {
 	.card {
 		flex-direction: column;
